# zilean

./: .dockerignore  .gitignore  Directory.Packages.props  Dockerfile  README.md  Taskfile.yaml  Zilean.sln
.taskfiles/Go/: Taskfile.yaml
.taskfiles/Python/: Taskfile.yaml
eng/: compose-dev.yaml
src/GoPttServer/: go.mod  go.sum  main.go
src/ParsettOverToRust/: Cargo.toml
src/ParsettOverToRust/adult_word_lists/: combined.txt  short.txt  short_compound.txt
src/ParsettOverToRust/benches/: parse.rs  parse_batch_4_cores.rs  parse_batch_8_cores.rs
src/ParsettOverToRust/src/: errors.rs  handler_wrapper.rs  lib.rs  parser.rs  parser_handlers.rs  transforms.rs
src/ParsettOverToRust/src/extensions/: mod.rs  regex.rs
src/ParsettOverToRust/src/types/: codec.rs  language.rs  mod.rs  network.rs  quality.rs
src/ParsettOverToRust/tests/: mod.rs  test_adult.rs  test_audio.rs  test_codec.rs  test_collection.rs  test_container.rs  test_convert.rs  test_date.rs  test_dubbed.rs  test_edge.rs  test_edition.rs  test_episode_code.rs  test_episodes.rs  test_extras.rs  test_group.rs  test_hardcoded.rs  test_hdr.rs  test_language.rs  test_main.rs  test_network.rs  test_parser.rs  test_proper.rs  test_quality.rs  test_region.rs  test_repack.rs  test_resolution.rs  test_retail.rs  test_season.rs  test_site.rs  test_size.rs  test_sports.rs  test_title.rs  test_trash.rs  test_unrated.rs  test_volume.rs  test_year.rs
src/Protos/: torrent_parser.proto  zilean_rust.proto
src/PythonPttServer/: main.py  pyproject.toml  torrent_parser_pb2.py  torrent_parser_pb2_grpc.py
src/RustServer/: Cargo.toml  build.rs
src/RustServer/src/: main.rs
src/RustServer/src/configuration/: config.rs
src/RustServer/src/dmm/: db_service.rs  dmm_service.rs  mod.rs  page_parser.rs  repo_manager.rs
src/RustServer/src/dmm/types/: dmm_last_import.rs  dmm_query.rs  extracted_dmm_entry.rs  extracted_dmm_entry_response.rs  imdb_file.rs  mod.rs  parsed_pages.rs  streamed_entry.rs  torrent_info.rs
src/RustServer/src/grpc/: constants.rs  handler.rs  mapping.rs  mod.rs  server.rs
src/RustServer/src/imdb/: ingestor.rs  mod.rs  searcher.rs
src/RustServer/src/utils/: mod.rs  strings.rs
src/Zilean.ApiService/: GlobalUsings.cs  Zilean.ApiService.csproj
src/Zilean.Database/: GlobalUsings.cs  ZileanDbContext.cs
src/Zilean.Scraper/: GlobalUsings.cs  Program.cs  Zilean.Scraper.csproj
src/Zilean.Shared/: GlobalUsings.cs  Zilean.Shared.csproj
tests/Zilean.Tests/: GlobalUsings.cs  (+1 more)
(+79 files in other folders)
