[package]
name = "zilean_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
parsett_rust = { path = "../ParsettOverToRust" }
reqwest = { version = "0.12.18", features = ["stream", "gzip"] }
flate2 = "1.1.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"] }
tonic = { version = "0.13.1", features = ["transport"] }
tonic-reflection = "0.13.1"
tantivy = "0.24.1"
prost = "0.13.5"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
chrono = {version = "0.4.41", features = ["serde"]}
anyhow = "1.0.98"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "tls-rustls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
config = { version = "0.15.11", features = ["serde_json"] }
rayon = "1.10.0"
jemallocator = "0.5.4"
git2 = "0.20.2"
regex = "1.11.1"
lazy_static = "1.5.0"
dashmap = "6.1.0"
time = "0.3.41"
lz-str = "0.2.1"

# Required for building on Alpine Linux, even if unused directly
openssl = { version = "0.10.73", features = ["vendored"] }
async-trait = "0.1.88"
async-stream = "0.3.6"
futures-core = "0.3.31"
log = "0.4.27"

[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"

[features]
debug = []


